2006-04-21  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Back to development cycle

=== release 0.10.2 ===

2006-04-21   <>

	* configure.ac:
	  releasing 0.10.2, "... Y un cafe solo"

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlobject.c: (gnl_object_change_state):
	'really' wrong state_change handling

2006-04-07  Edward Hervey  <edward@fluendo.com>

	* COPYING:
	Convert all remaining files to be coherent with the change to LGPL
	licensing.

2006-04-07  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Back to development (for good)

=== release 0.10.1 ===

2006-04-06  Thomas Vander Stichele <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.10.1, "Jamon Serrano"

2006-04-06  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	back to development

2006-04-06  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.10.1 release

2006-04-05  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.10.0.11 pre-release

2006-04-05  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_finalize),
	(gnl_composition_handle_message), (gnl_composition_change_state),
	(gnl_composition_add_object), (gnl_composition_remove_object):
	more memleak fixes.
	* gnl/gnlsource.c: (gnl_source_dispose), (gnl_source_finalize):
	more debug.
	* tests/check/simple.c: (GST_START_TEST), (gnonlin_suite):
	Add more debug and refcount checks.

2006-04-05  Edward Hervey  <edward@fluendo.com>

	* tests/check/Makefile.am:
	Increasing timeout for tests since we're asking a lot

2006-04-05  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (ready_and_lock_child_state),
	(gnl_composition_handle_message), (handle_seek_event),
	(gnl_composition_change_state), (update_pipeline),
	(object_start_changed), (object_stop_changed),
	(object_priority_changed), (object_active_changed),
	(gnl_composition_add_object), (gnl_composition_remove_object):
	Only force state change in (update_pipeline) when not being called from